<resources>
    <string name="app_name">美女尤物</string>
    <string name="be_bip_popularize_text">推广成为一年VIP(%1$d/%2$d)</string>
    <string name="be_privilege">特权</string>
    <string name="be_vip">VIP</string>
    <string name="be_vip_exclusive_sign">VIP专属标志</string>
    <string name="be_vip_extension">推广</string>
    <string name="be_vip_goto_popularize">去推广</string>
    <string name="be_vip_i_konw">我知道了</string>
    <string name="be_vip_oneyear_text">一年优美VIP</string>
    <string name="be_vip_ordinary_user">普通用户</string>
    <string name="be_vip_price">%1$d元</string>
    <string name="be_vip_privilege">VIP特权>></string>
    <string name="be_vip_privilege_dialog_title">VIP特权</string>
    <string name="be_vip_watch_beauty_video">美女视频无限看</string>
    <string name="begin_refresh">即将刷新</string>
    <string name="bit_rate">bit_rate</string>
    <string name="cancel_focus_fail">取消关注失败</string>
    <string name="cancel_focus_succeed">取消关注成功</string>
    <string name="cancel_refresh">取消刷新</string>
    <string name="choose_photo_title">选择照片</string>
    <string name="close">Close</string>
    <string name="detail_dowmload_goto_videofor">"下载V聊,马上就可以与主播一对一
视频哦!"</string>
    <string name="detail_follow">关注</string>
    <string name="detail_gotodownload">去下载</string>
    <string name="detail_label">Ta的标签</string>
    <string name="detail_return">返回</string>
    <string name="detail_video">Ta的视频</string>
    <string name="detail_video_for_he">与Ta视频</string>
    <string name="detail_video_num">%1$d个视频</string>
    <string name="err_md5_check_failed">文件md5校验失败</string>
    <string name="err_network_not_available">网络异常，请确定是否联网</string>
    <string name="err_register_nickname_empty">昵称不能为空</string>
    <string name="err_register_nickname_invalid">昵称由汉字字母数字_-组成</string>
    <string name="err_register_nickname_len_invalid">昵称不能超过16个字符(一个汉字算两个字符)</string>
    <string name="error_no_external_storage">暂无外部存储</string>
    <string name="error_no_space_left_on_device">sd卡空间不足，请及时清理。</string>
    <string name="error_not_install_wechat">未安装微信</string>
    <string name="error_report_failed">举报失败</string>
    <string name="exit">Exit</string>
    <string name="focus_fail">关注失败</string>
    <string name="focus_succeed">关注成功</string>
    <string name="fps">fps</string>
    <string name="getVipSucceed">获取VIP成功</string>
    <string name="go_to_elsewhere_see">去别处看看吧！</string>
    <string name="hint_neglect">忽略</string>
    <string name="hint_open">打开</string>
    <string name="hint_title">打开通知，不要错过任何重要信息哦</string>
    <string name="ijkplayer_dummy" />
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="latest_photo">最近照片</string>
    <string name="load_cost">load-cost</string>
    <string name="login_agreed">我已同意优美</string>
    <string name="login_agreement"><u>用户协议与隐私条款</u></string>
    <string name="login_agreement_title">用户协议</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_hint">请先登录</string>
    <string name="login_input_phone">请输入手机号</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_regist_text">注册账号</string>
    <string name="login_register">注册</string>
    <string name="login_text">登录</string>
    <string name="login_title">手机号登录</string>
    <string name="media_information">Media Information</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_language">Language</string>
    <string name="mi_length">Length</string>
    <string name="mi_media">Media</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_player">Player</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mine_be_vip">成为VIP</string>
    <string name="mine_confirm">确定</string>
    <string name="mine_imput_name">请输入名称</string>
    <string name="mine_mine_text">我的</string>
    <string name="mine_setting_name">修改昵称</string>
    <string name="mine_sign_out">安全退出</string>
    <string name="modify_nickname_succeed">修改昵称成功</string>
    <string name="multiface_crop_help">Tap a face to begin.</string>
    <string name="my_wallet_recharge">充值</string>
    <string name="net_load_fail">网络加载失败</string>
    <string name="network_avaliable_tip">网络加载失败,请稍后再试</string>
    <string name="no_focus_anybody">你还没有关注任何人</string>
    <string name="offfocus">已关注</string>
    <string name="onfocus">关注</string>
    <string name="over_time">您的VIP所剩%1$d天%2$d小时%3$d分</string>
    <string name="pay_tool_alipay">支付宝支付</string>
    <string name="pay_tool_weixin">微信支付</string>
    <string name="phone_register">手机号注册</string>
    <string name="please_refresh">请再次刷新或检查网络</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="push_logout_content">账户在其他地方登录，您被挤下线了!</string>
    <string name="recent">Recent</string>
    <string name="recharge_cancel">取消充值</string>
    <string name="recharge_fail">充值失败</string>
    <string name="recharge_success">充值成功</string>
    <string name="refresh_complete">刷新完成</string>
    <string name="refreshing">刷新中</string>
    <string name="release_to_refresh">松手刷新</string>
    <string name="report_content_desc1">色情、赌博、毒品</string>
    <string name="report_content_desc2">谣言、社会负面、诈骗</string>
    <string name="report_content_desc3">邪教、非法集会、传销</string>
    <string name="report_content_desc4">医药、整形、虚假广告</string>
    <string name="report_content_desc5">有奖集赞和关注转发</string>
    <string name="report_content_desc6">违反国家政策和法律</string>
    <string name="report_select_title">请选择举报原因(可多选):</string>
    <string name="report_success">举报成功</string>
    <string name="report_title">举报</string>
    <string name="sample">Sample</string>
    <string name="savingImage">保存中，请稍候</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="setting_download_failed">下载失败，点击重试。</string>
    <string name="setting_download_finished">下载已完成。</string>
    <string name="setting_download_progress" formatted="false">已下载 %.2fM/%.2fM</string>
    <string name="setting_has_new_version">优美检测到新版本</string>
    <string name="setting_is_latest_version">当前版本已经是最新版本了</string>
    <string name="setting_latest_version_introduction">优美有新的版本(%s)啦!</string>
    <string name="setting_version">更新版本：</string>
    <string name="setting_version_number">优美 %s版本</string>
    <string name="settings">Settings</string>
    <string name="share_fail">分享失败</string>
    <string name="share_qq">QQ</string>
    <string name="share_qq_zone">QQ空间</string>
    <string name="share_weibo">微博</string>
    <string name="share_weixin_pyq">朋友圈</string>
    <string name="show_info">Info</string>
    <string name="sr_hours_ago"> hours ago</string>
    <string name="sr_last_update">last update: </string>
    <string name="sr_load_complete">Loaded</string>
    <string name="sr_load_failed">Load failed</string>
    <string name="sr_loading">Loading…</string>
    <string name="sr_minutes_ago"> minutes ago</string>
    <string name="sr_no_more_data">No more data</string>
    <string name="sr_pull_down">Pull Down</string>
    <string name="sr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="sr_pull_up">Pull Up</string>
    <string name="sr_pull_up_to_load">Pull Up to Load</string>
    <string name="sr_refresh_complete">Updated</string>
    <string name="sr_refresh_failed">Update failed</string>
    <string name="sr_refreshing">Updating…</string>
    <string name="sr_release_to_load">Release To Load</string>
    <string name="sr_release_to_refresh">Release To Refresh</string>
    <string name="sr_seconds_ago"> seconds ago</string>
    <string name="str_amount">%d</string>
    <string name="str_cancel">取消</string>
    <string name="str_del">删除</string>
    <string name="str_loading">加载中</string>
    <string name="str_logout_confirm_tip">是否确定退出?</string>
    <string name="str_pay_tool">支付方式</string>
    <string name="str_pay_tool_tip">请选择以下支付方式支付:</string>
    <string name="str_pick">选取</string>
    <string name="str_recharge_tip" formatted="false">充值%dV币，需支付%d元</string>
    <string name="str_share_video">分享优美小视频</string>
    <string name="str_wechat">微信</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="there_no_data">这里还没有数据</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_ratio">Scale</string>
    <string name="toggle_render">Render</string>
    <string name="tracks">Tracks</string>
    <string name="up_vip">升级VIP</string>
    <string name="v_cache">v-cache</string>
    <string name="vdec">vdec</string>
    <string name="wallpaper">设置壁纸背景，请稍候</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">取消</string>
    <string name="crowd_award">你参与的制片团活动「%s」回报已发放</string>
    <string name="crowd_details">制片团详情</string>
    <string name="crowd_failed">你参与的制片团活动「%s」未成功，尤果币已退回到你的账户中，请查收</string>
    <string name="crowd_failed_return">助力失败，尤果币已退还</string>
    <string name="crowd_funding_support_look">回报查看路径：</string>
    <string name="crowd_funding_support_look_desc">我的 > 已购买 > 制片团</string>
    <string name="crowd_funding_support_time">回报到达时间：制片团活动成功结束后预计30个工作日内</string>
    <string name="crowd_goal">助力目标：%d尤果币</string>
    <string name="crowd_join_coin">参与金额：%d</string>
    <string name="crowd_join_count">参与次数：%d</string>
    <string name="crowd_models">参与模特：%s</string>
    <string name="crowd_running">助力进行中，敬请关注</string>
    <string name="crowd_self_support_count">已助力 x%d</string>
    <string name="crowd_success">你参与的制片团活动「%s」已成功，回报会在30个工作日内发放</string>
    <string name="crowd_success_gift">助力完成，奖品已发放</string>
    <string name="crowd_success_making">助力完成，奖励制作中</string>
    <string name="crowd_title">制片团</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="current_yinguo">您当前余额为：%d银果</string>
    <string name="current_yinguo_coin">余额为：%d银果币</string>
    <string name="current_yinguo_not_enough">您当前余额不足，请充值</string>
    <string name="description">That&amp;apos;s the image to draw the progressbar around.</string>
    <string name="download_now">立刻下载</string>
    <string name="edit_location_001">填写收获地址</string>
    <string name="edit_location_002">保存</string>
</resources>