<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/login_bg"
    android:tag="layout/fragment_login_dialog_0">

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:paddingLeft="12.0dip"
        android:paddingRight="12.0dip">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/view_margin_coincide"
            android:layout_marginRight="@dimen/view_margin_coincide"
            android:text="@string/login_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line_divide"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_title"
            android:background="@color/white" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line_divide"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_title"
            android:background="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8.0dip">

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agreed"
            android:textColor="@color/white"
            android:textSize="12.199982sp" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_hint"
            android:text="@string/login_agreement"
            android:textColor="@color/login_agreement_text_color"
            android:textSize="12.199982sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linear_bottom"
        android:layout_alignRight="@+id/linear_bottom"
        android:layout_below="@+id/relative_top"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31.0dip"
        android:layout_marginTop="21.0dip"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5.0dip"
            android:src="@mipmap/login_icon_qq" />

        <ImageView
            android:id="@+id/img_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5.0dip"
            android:src="@mipmap/login_icon_wx" />

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5.0dip"
            android:src="@mipmap/login_icon_phone" />
    </RelativeLayout>
</RelativeLayout>